k8s/firefly-iii/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii
  labels:
    app: firefly-iii
spec:
  selector:
    matchLabels:
      app: firefly-iii
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: firefly-iii
        tier: frontend
    spec:
      containers:
      - name: firefly-iii
        image: fireflyiii/core:version-5.7.18
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - mountPath: "/var/www/html/storage/upload"
          name: upload-datadir
      volumes:
        - name: upload-datadir
          persistentVolumeClaim:
            claimName: firefly-iii-upload-datadir
