k8s/firefly-iii/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: firefly-iii
  labels:
    app: firefly-iii
spec:
  type: clusterIP
  selector:
    app: firefly-iii
    tier: frontend
  ports:
    - name: http
      port: 8080
      targetPort: http
