k8s/firefly-iii/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly-iii
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
    - host: firefly.k8s.prrlvr.fr
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: firefly-iii
                port:
                  name: http
  tls:
    - hosts:
        - firefly.k8s.prrlvr.fr
      secretName: firefly-tls
